--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -37,9 +37,9 @@
                 <div id="chessboard-main-container">
                     <div class="chess-board-area rounded-3">
                         <div class="board-relative-wrapper position-relative">
-                            <div id="timer-black" class="timer-box timer-top-right">0:00</div>
+                            <div id="timer-black" class="timer-box timer-top-right" style="display: none;">0:00</div>
                             <div id="myBoard" style="width: 100%;"></div>
-                            <div id="timer-white" class="timer-box timer-bottom-right">0:00</div>
+                            <div id="timer-white" class="timer-box timer-bottom-right" style="display: none;">0:00</div>
                         </div>
 
                         <div class="button-group-container mt-3">
