--- a/frontend/templates/layout.html
+++ b/frontend/templates/layout.html
@@ -4,6 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}WonderChess - Intelligent Chess Assistant System{% endblock %}</title>
+    
+    <!-- Preconnect to speed up cross-origin requests -->
+    <link rel="preconnect" href="https://cdn.jsdelivr.net">
+    <link rel="preconnect" href="https://code.jquery.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+
     <link rel="icon" type="image/svg+xml" href="{{ url_for('static', filename='img/brand-logo.svg') }}">
 
     <!-- Base CSS -->
@@ -19,11 +26,11 @@
 
     {% block body_content %}{% endblock %}
 
-    <!-- Base Scripts -->
-    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js"></script>
-    <script src="{{ url_for('static', filename='js/chessboard.js') }}"></script>
+    <!-- Base Scripts  -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" defer></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/chess.js/0.10.3/chess.min.js" defer></script>
+    <script src="{{ url_for('static', filename='js/chessboard.js') }}" defer></script>
     
     {% block scripts %}{% endblock %}
 
