feat: integrate learn page

--- a/frontend/static/scss/style.scss
+++ b/frontend/static/scss/style.scss
@@ -30,6 +30,9 @@
 /* 10. OPENINGS PAGE */
 @import 'partials/openings';
 
+/* 15. LEARN PAGE */
+@import 'partials/learn';
+
 /* 11. ANIMATIONS & UTILS */
 @import 'partials/utils';
 
