--- a/frontend/templates/partials/navbar.html
+++ b/frontend/templates/partials/navbar.html
@@ -23,6 +23,9 @@
                     <li class="nav-item">
                         <a id="nav-opening" class="nav-link nav-mode-link {{ 'active' if active_page == 'openings' }}" href="{{ url_for('main.openings_page') }}">Khai cuộc</a>
                     </li>
+                    <li class="nav-item">
+                        <a id="nav-learn" class="nav-link nav-mode-link {{ 'active' if active_page == 'learn' }}" href="{{ url_for('main.learn_page') }}">Học tập</a>
+                    </li>
                 </ul>
                 <div class="d-flex align-items-center" id="navbar-user-section">
                     <span id="user-display" class="me-3 align-self-center text-white-50">Chào, Khách!</span>
