--- a/frontend/static/scss/partials/_welcome.scss
+++ b/frontend/static/scss/partials/_welcome.scss
@@ -6,12 +6,13 @@
     width: 100%;
     height: 100%;
     z-index: 1000;
-    background-position: center center;
-    background-image: url('/static/img/background.png');
-    background-size: cover;
+    background-position: top center;
+    background-image: url('/static/img/background.webp');
+    background-size: 105% 105%;
     background-attachment: fixed;
     position: relative;
     min-height: 100vh;
+    overflow: hidden;
 }
 
 #welcome-screen::before {
@@ -21,7 +22,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.7);
+    background: radial-gradient(circle at 30% 30%, rgba(0, 0, 0, 0.5) 0%, rgba(0, 0, 0, 0.8) 70%, rgba(0, 0, 0, 1) 100%);
     z-index: -1;
 }
 
