--- a/frontend/templates/index.html
+++ b/frontend/templates/index.html
@@ -1,5 +1,7 @@
 {% extends "layout.html" %}
 
+{% block body_class %}learn-adventure-background allow-scroll{% endblock %}
+
 {% block title %}WonderChess - Intelligent Chess Assistant System{% endblock %}
 
 {% block body_content %}
