--- a/frontend/templates/layout.html
+++ b/frontend/templates/layout.html
@@ -25,6 +25,15 @@
 <body class="{% block body_class %}{% endblock %}">
 
     {% block body_content %}{% endblock %}
+    
+    <!-- Floating magic particles -->
+    <div class="magic-particles">
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+        <div class="particle"></div>
+    </div>
 
     <!-- Base Scripts  -->
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" defer></script>
