--- a/frontend/templates/openings.html
+++ b/frontend/templates/openings.html
@@ -2,7 +2,7 @@
 
 {% block title %}Thư viện Khai cuộc - WonderChess{% endblock %}
 
-{% block body_class %}allow-scroll{% endblock %}
+{% block body_class %}learn-adventure-background allow-scroll{% endblock %}
 
 {% block body_content %}
 <div id="main-app-screen" class="container-fluid py-3">
